# kiro-ai-development-hackathon

./: .coverage.herbert.local.3927.XcxntsRx  .coverage.herbert.local.4395.XuewUyAx  .coverage.herbert.local.59876.XqQOYlvx  .coverage.herbert.local.60301.XAOWlAFx  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENT_LAUNCH_README.md  ARCHITECTURE_REFACTOR.md  BEAST_MODE_VISION.md  CLI_STANDARDS_ENFORCEMENT.md  DEPLOYMENT_READY.md  GIT_INTEGRATION.md  INTEGRATION_TEST_FINDINGS.md  MARKETING_ONE_PAGER.md  Makefile  PITCH_DECK_SUMMARY.md  RCA_MITIGATION_PLAN.md  RDI_CHAIN_VALIDATION.md  RDI_DAG_DISCOVERY_PAPER.md  RDI_DAG_EMPIRICAL_EVIDENCE.md  RDI_DAG_INDUSTRY_IMPLICATIONS.md  RDI_DAG_MATHEMATICAL_ANALYSIS.md  RDI_IMPLEMENTATION_SPORE.md  README.md  RM_COMPLIANCE_IMPLEMENTATION.md  RM_IMPLEMENTATION_SPORE.md  RM_RDI_IMPLEMENTATION_PROMPT.md  TASK_10_ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  TASK_11_COMPREHENSIVE_TEST_SUITE_SUMMARY.md  TASK_14_COMPLETION_SUMMARY.md  TASK_18_COMPLETION_SUMMARY.md  TASK_2_2_IMPLEMENTATION_SUMMARY.md  TASK_4_2_AUTOMATED_CORRECTION_WORKFLOWS_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TASK_DAG_SYSTEM_SUMMARY.md  analyze_spec_landscape.py  beast  beast-mode-creative-freedom-manifesto.md  beast-mode-educational-implications.md  (+85 more)
.cursor/: mcp.json
.github/: branch-protection-config.md
assessment_results/: approach_measurements.jsonl  beast_mode_evidence_package_20250903_202129.json  beast_mode_evidence_package_20250903_202138.json  beast_mode_evidence_package_20250903_202242.json  beast_mode_evidence_package_20250903_202611.json  beast_mode_evidence_package_20250903_202638.json  beast_mode_evidence_package_20250903_212430.json  beast_mode_evidence_package_20250903_212534.json  beast_mode_evidence_package_20250903_213432.json  beast_mode_evidence_package_20250903_215250.json  beast_mode_evidence_package_20250903_215331.json  beast_mode_evidence_package_20250903_215803.json  beast_mode_evidence_package_20250903_220943.json  beast_mode_evidence_package_20250904_073340.json  beast_mode_evidence_package_20250904_074300.json  beast_mode_evidence_package_20250905_062139.json  beast_mode_evidence_package_20250905_062209.json  beast_mode_evidence_package_20250905_062210.json  beast_mode_evidence_package_20250905_062211.json  beast_mode_evidence_package_20250905_062412.json  beast_mode_evidence_package_20250905_062413.json  beast_mode_evidence_package_20250905_062414.json  beast_mode_evidence_package_20250905_062604.json  beast_mode_evidence_package_20250905_113755.json  beast_mode_evidence_package_20250905_113756.json  beast_mode_evidence_package_20250905_113757.json  beast_mode_evidence_package_20250905_113953.json  beast_mode_evidence_package_20250905_113954.json  beast_mode_evidence_package_20250905_113955.json  beast_mode_evidence_package_20250905_114106.json  beast_mode_evidence_package_20250905_114107.json  beast_mode_evidence_package_20250905_114108.json  beast_mode_evidence_package_20250905_160718.json  beast_mode_evidence_package_20250905_160731.json  beast_mode_evidence_package_20250905_160745.json  beast_mode_evidence_package_20250905_160801.json  beast_mode_evidence_package_20250905_160815.json  beast_mode_evidence_package_20250905_160829.json  beast_mode_evidence_package_20250905_160830.json  beast_mode_evidence_package_20250905_160834.json  (+2294 more)
beast_mode_metrics/: financial_metrics.jsonl  gcp_billing.jsonl  monitor_config.json  network_metrics.jsonl  resource_metrics.jsonl  token_usage.jsonl
deployment/: DEPLOYMENT_OPTIONS.md  SEPARATION_OF_CONCERNS.md
docs/: README.md  consolidated_api.md  gitkraken-integration-architecture.md  gitkraken-integration-traceability.md  implementation-reference.md  performance-improvements-summary.md  spec-reconciliation-summary.md
examples/: cli_usage_results.json  component_boundary_resolution_demo.py  enhanced_rm_validator_demo.py  file_change_detection_demo.py  rm_validator_demo.py  test_rca_engine_demo.py  tool_orchestration_demo.py
makefiles/: activity-models.mk  analysis.mk  beast-mode.mk  colors.mk  config.mk  domains.mk  installation.mk  multi-language.mk  platform.mk  prevention_patterns.md  quality.mk  testing.mk
metrics_data/: development_velocity_systematic_measurements.jsonl  gke_service_requests.jsonl  gke_velocity_measurements.jsonl  problem_resolution_speed_baseline_measurements.jsonl  problem_resolution_speed_systematic_measurements.jsonl  tool_health_performance_systematic_measurements.jsonl
packer-systo-go/: go.mod
packer-systo-python/: pyproject.toml
packer-systo-python/src/packer_systo/: __init__.py
packer-systo-python/src/packer_systo/core/: bridge.py
patterns/: rca_patterns.json  test_pattern_learning.json  test_pattern_metrics.json  test_specific_patterns.json
scripts/: actual_billing_analyzer.py  advanced_neo4j_integration.py  analysis_control.py  analyze_requirements_overlaps.py  analyze_round_trip_hairball.py  apparmor_pytest_profile  ast_enhanced_linter.py  ast_enhanced_linter_model.py  auto_format_all.py  auto_format_all.py.backup  auto_format_all_model.json  backlog_cli.js  bandit_integration.py  beast_mode_dag_launcher.py  beast_mode_resource_monitor.py  black_wrapper.sh  brutal_encoding_fixer.py  call_ghostbusters_encoding_issue.py  call_ghostbusters_properly.py  chaos_semantic_diff_demo.py  check_code_quality.py  check_model_conformance.py  ci_activity_models.py  cli_parser.py  commit_and_push.py  comprehensive_github_discovery.py  comprehensive_security_scanner.py  create_proper_notebook.py  crud_operations.py  cypher_validator.py  cypher_validator.py.backup  debug_pep8_detection.py  debug_regex.py  debug_regex_capture.py  delete_all_cloud_functions.py  demo_github_discovery.py  dependency_validator.py  deploy-container.sh  deploy-ghostbusters-gcp.sh  deploy-spawn.sh  (+169 more)
spores/: comprehensive-spore-acknowledgment-and-coordination-response.md  distributed-beast-mode-mastery-completion-spore.md  gke-hackathon-spore.md  gke-orchestration-integration-implementation-spore.md  integration-authorization-and-creative-freedom-response-spore.md  (+4 more)
src/: __init__.py
(+643 files in other folders)
